--- a/server/package.json
+++ b/server/package.json
@@ -4,12 +4,24 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon server.ts"
   },
   "dependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/fs-extra": "^9.0.13",
+    "@types/multer": "^1.4.7",
+    "@types/node": "^17.0.31",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
-    "mongoose": "^6.3.2"
+    "fs": "^0.0.1-security",
+    "mongoose": "^6.3.2",
+    "multer": "^1.4.4",
+    "multer-gridfs-storage": "^5.0.2",
+    "nodemon": "^2.0.16",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.4",
+    "uuidv4": "^6.2.13"
   }
 }
