--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,10 @@
   
   "compilerOptions": {
     "baseUrl": "src",
-    "target": "es5",
+    "target": "es6",
+   "module": "commonjs",
+    "rootDir": "./",
+    "outDir": "./build",
     "lib": [
       "dom",
       "dom.iterable",
@@ -15,7 +18,6 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
-    "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
