--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,9 @@
     "@types/express": "^4.17.13",
     "@types/fs-extra": "^9.0.13",
     "@types/multer": "^1.4.7",
+    "@types/multer-s3": "^2.7.12",
     "@types/node": "^17.0.31",
+    "aws-sdk": "^2.1131.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
@@ -19,6 +21,7 @@
     "mongoose": "^6.3.2",
     "multer": "^1.4.4",
     "multer-gridfs-storage": "^5.0.2",
+    "multer-s3": "^2.10.0",
     "nodemon": "^2.0.16",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4",
