--- a/server/package.json
+++ b/server/package.json
@@ -7,17 +7,22 @@
     "start": "nodemon server.ts"
   },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/fs-extra": "^9.0.13",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/mongodb": "^4.0.7",
     "@types/multer": "^1.4.7",
     "@types/multer-s3": "^2.7.12",
     "@types/node": "^17.0.31",
     "aws-sdk": "^2.1131.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "fs": "^0.0.1-security",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.2",
     "multer": "^1.4.4",
     "multer-gridfs-storage": "^5.0.2",
