--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,9 @@
-MONGO_URL=mongodb+srv://Mattias:YO5aa4bcRRLhTRYd@cluster0.w2xh9.mongodb.net/travel-app?retryWrites=true&w=majority
+MONGO_URL=mongodb+srv://Mattias:YO5aa4bcRRLhTRYd@cluster0.w2xh9.mongodb.net/blog-app?retryWrites=true&w=majority
+
+
+AWS_BUCKET_REGION=eu-north-1
+AWS_BUCKET_NAME=mern-app-blog
+AWS_ACCESS_KEY_ID=AKIARI6FCNOCZT3TE5IK
+AWS_SECRET_ACCESS_KEY=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
+
+JWT=testingsecurity
